# simcc-back

./: .container.env  .dockerignore  .env.container  .gitignore  Dockerfile  Dockerfile.selenium  README.md  SimccBD.py  bd_maria.py  compose.selenium.yaml  compose.yaml  compose.yml  config.py  csv_powerBI.py  init.admin.sql  init.sql  logging.yaml  pyproject.toml  routine.sh  routine.week.sh  server.py
.github/workflows/: build.yaml  deploy-conectee.yaml  deploy-iapos.yaml
Dao/: areaFlowSQL.py  generalSQL.py  graduate_programSQL.py  researcherSQL.py  sgbdSQL.py  termFlowSQL.py
Model/: Guidance_Researcher.py  Researcher_Report.py
Rest/: book_events_area_patentRest.py  researcherDataRest.py
routines/: abstract_ai.py  ai.py  count_stars.py  embedding_database.py  insert_research_groups.py  logger.py  pog.py  population.py  powerBI.py  production.py  program_indprod.py  research_groups.py  researcher_image.py  researcher_indprod.py  scrape_program_researchers.py  search_terms.py  soap_lattes.py  update_programs.py  vip.py
scripts/: 001_programs.py  001_researcher_programs.py  002_program_research_lines.py  002_programs.py  002_researcher_programs.py  analysis.tmp.py  conectee_cong.py  insert_programs_csv.py  insert_researcher_progrmas_csv.py  ngrams.py  programs.py  research_groups.py  researcher_class.py  scrap_productive_researchers.py  test.py  tmp.py  tmp2.py
scripts/dmdc/: dmdc_e1.py  dmdc_e2.py  dmdc_e4.py
scripts/graduate_program/: 001_programs.py  002_researchers.py  (+1 more)
simcc/: __init__.py  app.py  config.py  security.py
tests/: conftest.py  factories.py  test_db.py  test_metrics.py  test_researcher.py
(+105 files in other folders)
